Fix timeline item overflow, adjust background for mobile

--- a/assets/scss/timeline.scss
+++ b/assets/scss/timeline.scss
@@ -54,7 +54,7 @@ a {
 // Timeline
 #timeline {
   width: 100%;
-  margin: 30px auto;
+  margin: 80px auto 30x;
   position: relative;
   padding: 0 10px;
   @include prefix(transition, all 0.4s ease);
@@ -221,11 +221,11 @@ a {
 
 @media screen and (max-width: $max-phone) {
   #timeline {
-    margin: 30px;
+    margin: 45px 30px;
     padding: 0px;
     width: 90%;
     &:before {
-      left: 0;
+      left: 50px;
     }
 
     .timeline-item {
@@ -238,7 +238,7 @@ a {
         }
 
         .timeline-icon {
-          left: -50px;
+          left: 0;
 
           &::before {
             right: -5px;
@@ -267,7 +267,8 @@ a {
         }
       }
       .timeline-content {
-        width: 90%;
+        width: 80%;
+        margin-left: 50px;
         float: none;
         position: relative;
         margin-top: 15px;
@@ -283,11 +284,13 @@ a {
 
         h2 {
           text-align: left;
+          padding: 10px 15px;
+          box-shadow: 8px 4px 0 rgba(0, 0, 0, 0.1);
         }
       }
 
       .timeline-icon {
-        left: -50px;
+        left: 0;
         position: relative;
       }
     }
